--- a/themes/kscu-theme/layouts/partials/header/basic.html
+++ b/themes/kscu-theme/layouts/partials/header/basic.html
@@ -1,57 +1,70 @@
-<header class="py-6 font-semibold text-neutral-900 dark:text-neutral print:hidden sm:py-10">
-  <nav class="flex justify-between">
-    {{/* Site logo/title */}}
-    <div>
-      {{ if .Site.Params.Logo -}}
-        {{ $logo := resources.Get .Site.Params.Logo }}
-        {{ if $logo }}
-          <a href="{{ "" | relLangURL }}">
-            <img
-              src="{{ $logo.RelPermalink }}"
-              width="{{ div $logo.Width 2 }}"
-              height="{{ div $logo.Height 2 }}"
-              class="max-h-[10rem] max-w-[10rem] object-scale-down object-left"
-              alt="{{ .Site.Title }}"
-            />
-          </a>
-        {{ end }}
-      {{ else }}
-        <a
-          class="decoration-primary-500 hover:underline hover:decoration-2 hover:underline-offset-2"
-          rel="me"
-          href="{{ "" | relLangURL }}"
-          >{{ .Site.Title | markdownify | emojify }}</a
-        >
-      {{- end }}
-      {{ partial "translations.html" . }}
+<!-- Currently coded in mix of Tailwind and standard CSS -->
+<div class="font-medium text-sm shadow-lg"
+  style="
+  position: fixed; 
+  left: 0; 
+  right: 0; 
+  top: 0; 
+  background-color: black; 
+  color: white;">
+  <div class="flex justify-between items-center">
+    <div class="flex px-3 items-center" style="
+      height: 4rem;
+      border-style: none solid none none;
+      border-color: white;
+      border-width: 0.2rem;">
+      <!-- TODO change to logo instead of text -->
+      <p class="font-bold" style="
+        font-size: 3rem;
+        padding-bottom: 0.5rem; 
+        ">
+        <!-- Padding to help center, could not center otherwise -->
+         KSCU</p>
     </div>
-    {{/* Main menu */}}
-    {{ if or .Site.Menus.main (.Site.Params.enableSearch | default false) }}
-      <ul class="flex flex-col list-none ltr:text-right rtl:text-left sm:flex-row">
-        {{ if .Site.Menus.main }}
-          {{ range .Site.Menus.main }}
-            <li class="mb-1 sm:mb-0 ltr:sm:mr-7 ltr:sm:last:mr-0 rtl:sm:ml-7 rtl:sm:last:ml-0">
-              <a
-                class="decoration-primary-500 hover:underline hover:decoration-2 hover:underline-offset-2"
-                href="{{ .URL }}"
-                title="{{ .Title }}"
-                >{{ .Name | markdownify | emojify }}</a
-              >
-            </li>
-          {{ end }}
-        {{ end }}
-        {{ if .Site.Params.enableSearch | default false }}
-          <li class="ltr:sm:mr-7 ltr:sm:last:mr-0 rtl:sm:ml-7 rtl:sm:last:ml-0">
-            <button
-              id="search-button"
-              class="text-base hover:text-primary-600 dark:hover:text-primary-400"
-              title="{{ i18n "search.open_button_title" }}"
-            >
-              {{ partial "icon.html" "search" }}
-            </button>
-          </li>
-        {{ end }}
-      </ul>
-    {{ end }}
-  </nav>
-</header>
+    <div class="flex flex-col w-screen">
+      <div class="flex justify-between items-center">
+        <div class="flex px-3 py-1 items-center">
+          <div class="rounded-full" style="
+            background-color: red;
+            width: 1.1rem;
+            height: 1.1rem;">
+          </div>
+          <p class="px-3">LIVE</p>
+        </div>
+        <!-- TODO add href to pages -->
+        <div style="padding-right: 2rem;">
+          <a href="#" class="px-3">
+            HOMEPAGE
+          </a>
+          <a href="#" class="px-3">
+            BLOG
+          </a>
+          <a href="#" class="px-3">
+            SCHEDULE
+          </a>
+          <a href="#" class="px-3">
+            ABOUT US
+          </a>
+        </div>
+      </div>
+      <div style="
+        width: screen;
+        height: 0.1rem;
+        background-color: white;">
+      </div>
+      <!-- TODO connect API to this playing -->
+      <div class="flex items-center">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="black" viewBox="0 0 24 24" stroke="black" style="
+          background-color: white;
+          color: black;
+          height: 1.75rem;
+          margin-top: 0.1rem;
+           ">
+           <!-- Margin-top to even out the gap at the bottom -->
+          <path strokeLinecap="round" strokeLinejoin="round" d="M5.25 5.653c0-.856.917-1.398 1.667-.986l11.54 6.348a1.125 1.125 0 010 1.971l-11.54 6.347a1.125 1.125 0 01-1.667-.985V5.653z" />
+        </svg>        
+        <p class="px-3 py-1">PLAYING: Ruckus (feat. Richard Judge) - Club Edit, Mixed</p>
+      </div>
+    </div>
+  </div>
+</div>
