--- a/themes/kscu-theme/layouts/partials/header/basic.html
+++ b/themes/kscu-theme/layouts/partials/header/basic.html
@@ -24,11 +24,7 @@
     <div class="flex flex-col w-screen">
       <div class="flex justify-between items-center">
         <div class="flex px-3 py-1 items-center">
-          <div class="rounded-full" style="
-            background-color: red;
-            width: 1.1rem;
-            height: 1.1rem;">
-          </div>
+          <span id="live-now-circle"></span>
           <p class="px-3">LIVE</p>
         </div>
         <!-- TODO add href to pages -->
@@ -68,3 +64,39 @@
     </div>
   </div>
 </div>
+<style>
+  @keyframes pulse-red {
+      0% {
+          transform: scale(0.95);
+          box-shadow: 0 0 0 0 rgba(255, 82, 82, 0.7);
+      }
+  
+      70% {
+          transform: scale(1);
+          box-shadow: 0 0 0 10px rgba(255, 82, 82, 0);
+      }
+  
+      100% {
+          transform: scale(0.95);
+          box-shadow: 0 0 0 0 rgba(255, 82, 82, 0);
+      }
+  }
+  #live-now-circle {
+
+      /* display: flex; */
+      width: 12px;
+      height: 12px;
+      background-color: #b11010;
+
+      border-radius: 6px;
+      opacity: 100;
+      display: inline-block;
+
+      box-shadow: 0 0 0 0 rgb(48, 27, 27);
+      transform: scale(1);
+      animation: pulse-red 2s infinite;
+      animation-play-state: running;
+      margin-right: 1px
+  }
+</style>
+
