--- a/themes/kscu-theme/layouts/partials/header/basic.html
+++ b/themes/kscu-theme/layouts/partials/header/basic.html
@@ -27,20 +27,17 @@
           <span id="live-now-circle"></span>
           <p class="px-3">LIVE</p>
         </div>
-        <!-- TODO add href to pages -->
         <div style="padding-right: 2rem;">
-          <a href="#" class="px-3">
-            HOMEPAGE
-          </a>
-          <a href="#" class="px-3">
-            BLOG
-          </a>
-          <a href="#" class="px-3">
-            SCHEDULE
-          </a>
-          <a href="#" class="px-3">
-            ABOUT US
-          </a>
+          <ul class="flex flex-col list-none ltr:text-right rtl:text-left sm:flex-row">
+            {{ if .Site.Menus.main }}
+            {{ range .Site.Menus.main }}
+            <li class="mb-1 sm:mb-0 ltr:sm:mr-7 ltr:sm:last:mr-0 rtl:sm:ml-7 rtl:sm:last:ml-0">
+              <a class="decoration-primary-500 hover:underline hover:decoration-2 hover:underline-offset-2" href="{{ .URL }}"
+                title="{{ .Title }}">{{ .Name | markdownify | emojify }}</a>
+            </li>
+            {{ end }}
+            {{ end }}
+          </ul>
         </div>
       </div>
       <div style="
