Added social media icons to nav.

--- a/themes/kscu-theme/layouts/partials/header/basic.html
+++ b/themes/kscu-theme/layouts/partials/header/basic.html
@@ -1,3 +1,6 @@
+<!-- Reference for Icons -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 <!-- Currently coded in mix of Tailwind and standard CSS -->
 <div class="font-medium text-sm shadow-lg"
   style="
@@ -40,23 +43,38 @@
           </ul>
         </div>
       </div>
+      <!-- White divider line -->
       <div style="
         width: screen;
         height: 0.1rem;
         background-color: white;">
       </div>
       <!-- TODO connect API to this playing -->
-      <div class="flex items-center">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="black" viewBox="0 0 24 24" stroke="black" style="
-          background-color: white;
-          color: black;
-          height: 1.75rem;
-          margin-top: 0.1rem;
-           ">
-           <!-- Margin-top to even out the gap at the bottom -->
-          <path strokeLinecap="round" strokeLinejoin="round" d="M5.25 5.653c0-.856.917-1.398 1.667-.986l11.54 6.348a1.125 1.125 0 010 1.971l-11.54 6.347a1.125 1.125 0 01-1.667-.985V5.653z" />
-        </svg>        
-        <p class="px-3 py-1">PLAYING: Ruckus (feat. Richard Judge) - Club Edit, Mixed</p>
+      <div class="flex items-center justify-between">
+        <div class="flex items-center">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="black" viewBox="0 0 24 24" stroke="black" style="
+            background-color: white;
+            color: black;
+            height: 1.75rem;
+            margin-top: 0.1rem;
+            margin-left: 0.1rem;
+             ">
+             <!-- Margin-top to even out the gap at the bottom -->
+            <path strokeLinecap="round" strokeLinejoin="round" d="M5.25 5.653c0-.856.917-1.398 1.667-.986l11.54 6.348a1.125 1.125 0 010 1.971l-11.54 6.347a1.125 1.125 0 01-1.667-.985V5.653z" />
+          </svg>        
+          <p class="px-3 py-1">PLAYING: Ruckus (feat. Richard Judge) - Club Edit, Mixed</p>
+        </div>
+        <div class="flex" style="padding-right: 1.5rem">
+          <a href="https://www.instagram.com/kscuradio/?hl=en" target="_blank">
+            <i class="fa fa-instagram px-2" style="font-size: 24px; color: white;"></i>
+          </a>
+          <a href="https://twitter.com/kscu" target="_blank">
+            <i class="fa fa-twitter px-2" style="font-size: 24px; color: white;"></i>
+          </a>
+          <a href="https://open.spotify.com/user/kscu" target="_blank">
+            <i class="fa fa-spotify px-2" style="font-size: 24px; color: white;"></i>
+          </a>
+        </div>
       </div>
     </div>
   </div>
