--- a/themes/kscu-theme/layouts/partials/footer.html
+++ b/themes/kscu-theme/layouts/partials/footer.html
@@ -1,74 +1,55 @@
-<footer class="py-10 print:hidden">
-  {{/* Footer menu */}}
-  {{ if .Site.Menus.footer }}
-    <nav class="pb-4 text-base font-medium text-neutral-500 dark:text-neutral-400">
-      <ul class="flex flex-col list-none sm:flex-row">
-        {{ range .Site.Menus.footer }}
-          <li
-            class="mb-1 ltr:text-right rtl:text-left sm:mb-0 ltr:sm:mr-7 ltr:sm:last:mr-0 rtl:sm:ml-7 rtl:sm:last:ml-0"
-          >
-            <a
-              class="decoration-primary-500 hover:underline hover:decoration-2 hover:underline-offset-2"
-              href="{{ .URL }}"
-              title="{{ .Title }}"
-              >{{ .Name | markdownify | emojify }}</a
-            >
-          </li>
-        {{ end }}
-      </ul>
-    </nav>
-  {{ end }}
-  <div class="flex items-center justify-between">
-    <div>
-      {{/* Copyright */}}
-      {{ if .Site.Params.footer.showCopyright | default true }}
-        <p class="text-sm text-neutral-500 dark:text-neutral-400">
-          {{- with .Site.Params.copyright }}
-            {{ . | emojify | markdownify }}
-          {{- else }}
-            &copy;
-            {{ now.Format "2006" }}
-            {{ .Site.Author.name | markdownify | emojify }}
-          {{- end }}
-        </p>
-      {{ end }}
-      {{/* Theme attribution */}}
-      {{ if .Site.Params.footer.showThemeAttribution | default true }}
-        <p class="text-xs text-neutral-500 dark:text-neutral-400">
-          {{ $hugo := printf `<a class="hover:underline hover:decoration-primary-400 hover:text-primary-500"
-            href="https://gohugo.io/" target="_blank" rel="noopener noreferrer">Hugo</a>`
-          }}
-          {{ $congo := printf `<a class="hover:underline hover:decoration-primary-400 hover:text-primary-500" href="https://git.io/hugo-congo" target="_blank" rel="noopener noreferrer">Congo</a>` }}
-          {{ i18n "footer.powered_by" (dict "Hugo" $hugo "Congo" $congo) | safeHTML }}
-        </p>
-      {{ end }}
+<!-- Ignores default margins on the template -->
+<footer class="font-sm text-sm shadow-lg" style="
+  background-color: black;
+  width: 100vw;
+  position: relative;
+  left: 50%;
+  right: 50%;
+  margin-left: -50vw;
+  margin-right: -50vw;
+  color: white;
+">
+<div class="flex flex-col">
+  <div class="flex justify-between items-center px-2 py-3">
+    <div style="margin-left: 1.5rem;">
+      <p class="text-xl font-medium"> KSCU 103.3FM </p>
+      <p class=""> Santa Clara University Radio</p>
     </div>
-    {{/* Appearance switch */}}
-    {{ if .Site.Params.footer.showAppearanceSwitcher | default false }}
-      <div
-        class="{{ if .Site.Params.footer.showScrollToTop | default true -}}
-          ltr:mr-14 rtl:ml-14
-        {{- end }} cursor-pointer text-sm text-neutral-700 hover:text-primary-600 dark:text-neutral dark:hover:text-primary-400"
-      >
-        <button id="appearance-switcher" type="button">
-          <div
-            class="flex items-center justify-center w-12 h-12 dark:hidden"
-            title="{{ i18n "footer.dark_appearance" }}"
-          >
-            {{ partial "icon.html" "moon" }}
-          </div>
-          <div
-            class="items-center justify-center hidden w-12 h-12 dark:flex"
-            title="{{ i18n "footer.light_appearance" }}"
-          >
-            {{ partial "icon.html" "sun" }}
-          </div>
-        </button>
-      </div>
-    {{ end }}
+    <div style="text-align: center;">
+      <p>
+        General Inquiries: coordinating@kscu.org
+      </p>
+      <p>
+        Submit Music: music@kscu.org
+      </p>
+    </div>
+    <div style="text-align: right; margin-right: 1.5rem;">
+      <p> Santa Clara University </p>
+      <p> 500 El Camino Real, Santa Clara </p>
+      <p> CA, 95035 </p>
+    </div>
   </div>
-  {{/* Extend footer - eg. for extra scripts, etc. */}}
-  {{ if templates.Exists "partials/extend-footer.html" }}
-    {{ partialCached "extend-footer.html" . }}
-  {{ end }}
+  <div style="
+    background-color: white;
+    height: 0.1rem;
+  "></div>
+  <div class="flex justify-between items-center px-3">
+    <div class="flex py-2" style="margin-left: 1rem;">
+      <div class="flex" style="padding-right: 1.5rem">
+        <a href="https://www.instagram.com/kscuradio/?hl=en" target="_blank">
+          <i class="fa fa-instagram px-2" style="font-size: 24px; color: white;"></i>
+        </a>
+        <a href="https://twitter.com/kscu" target="_blank">
+          <i class="fa fa-twitter px-2" style="font-size: 24px; color: white;"></i>
+        </a>
+        <a href="https://open.spotify.com/user/kscu" target="_blank">
+          <i class="fa fa-spotify px-2" style="font-size: 24px; color: white;"></i>
+        </a>
+      </div>
+    </div>
+    <p style="margin-right: 1.5rem;"> Copyright &#169 2022 </p>
+  </div>
+
+</div>
+
 </footer>
