--- a/themes/kscu-theme/layouts/partials/recent-articles.html
+++ b/themes/kscu-theme/layouts/partials/recent-articles.html
@@ -1,6 +1,17 @@
 {{ if .Site.Params.homepage.showRecent | default false }}
-  <h2 class="mt-8 text-2xl font-extrabold">{{ i18n "shortcode.recent_articles" | emojify }}</h2>
-  {{ range first 5 (.Paginate (where .Site.RegularPages "Type" "in" .Site.Params.mainSections)).Pages }}
-    {{ partial "article-link.html" . }}
-  {{ end }}
+<div class="font-semibold text-4xl" style="color: black">
+  <div style="
+        line-height: 0.1em;
+        border-bottom: 1px solid black;
+      ">
+    <span style="
+            background-color: white;
+            padding:0 10px">
+      Recent Posts
+    </span>
+  </div>
+</div>
+{{ range first 5 (.Paginate (where .Site.RegularPages "Type" "in" .Site.Params.mainSections)).Pages }}
+{{ partial "article-link.html" . }}
+{{ end }}
 {{ end }}
