--- a/themes/kscu-theme/layouts/partials/header/basic.html
+++ b/themes/kscu-theme/layouts/partials/header/basic.html
@@ -36,7 +36,8 @@
             {{ if .Site.Menus.main }}
             {{ range .Site.Menus.main }}
             <li class="mb-1 sm:mb-0 ltr:sm:mr-7 ltr:sm:last:mr-0 rtl:sm:ml-7 rtl:sm:last:ml-0">
-              <a class="decoration-primary-500 hover:underline hover:decoration-2 hover:underline-offset-2" href="{{ .URL }}"
+              <a class="decoration-primary-500 hover:underline hover:decoration-2 hover:underline-offset-2" 
+                href="{{ .URL }}"
                 title="{{ .Title }}">{{ .Name | markdownify | emojify }}</a>
             </li>
             {{ end }}
