Added id to metadata section to allow for hiding on a page by page basis (eg. on schedule page)

--- a/themes/kscu-theme/layouts/_default/single.html
+++ b/themes/kscu-theme/layouts/_default/single.html
@@ -7,7 +7,7 @@
       <h1 class="mt-0 text-4xl font-extrabold text-neutral-900 dark:text-neutral">
         {{ .Title | emojify }}
       </h1>
-      <div class="mt-8 mb-12 text-base text-neutral-500 dark:text-neutral-400 print:hidden">
+      <div class="mt-8 mb-12 text-base text-neutral-500 dark:text-neutral-400 print:hidden" id="metadata">
         {{ partial "article-meta.html" (dict "context" . "scope" "single") }}
       </div>
     </header>
