--- a/themes/kscu-theme/layouts/partials/footer.html
+++ b/themes/kscu-theme/layouts/partials/footer.html
@@ -1,8 +1,6 @@
 <!-- Ignores default margins on the template -->
-<footer class="font-sm text-sm shadow-lg" style="
-  background-color: black;
+<footer class="font-sm text-sm shadow-lg bg-neutral-900 relative" style="
   width: 100vw;
-  position: relative;
   left: 50%;
   right: 50%;
   margin-left: -50vw;
@@ -13,7 +11,7 @@
   <div id="flex_container" class="flex justify-between items-center px-2 py-3">
     <div id="title_footer">
       <p id="title_text" class="text-xl font-medium"> KSCU 103.3FM </p>
-      <p id="title_text"> Santa Clara University Radio</p>
+      <p class="text-3xl" id="title_text"> Santa Clara University Radio</p>
     </div>
     <div style="text-align: center;">
       <p>
@@ -40,7 +38,7 @@
           <i class="fa fa-instagram px-2" style="font-size: 24px; color: white;"></i>
         </a>
         <a href="https://twitter.com/kscu" target="_blank">
-          <i class="fa fa-twitter px-2" style="font-size: 24px; color: white;"></i>
+          <i class="fa fa-twitter px-2 text-red" style="font-size: 24px;"></i>
         </a>
         <a href="https://open.spotify.com/user/kscu" target="_blank">
           <i class="fa fa-spotify px-2" style="font-size: 24px; color: white;"></i>
