--- a/themes/kscu-theme/layouts/partials/header/basic.html
+++ b/themes/kscu-theme/layouts/partials/header/basic.html
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <!-- Currently coded in mix of Tailwind and standard CSS -->
-<div class="font-medium text-sm shadow-lg"
+<div class="font-medium text-sm shadow-lg z-10"
   style="
   position: fixed; 
   left: 0; 
