Updated header and footer to not extend to borders of screen

--- a/themes/kscu-theme/layouts/partials/footer.html
+++ b/themes/kscu-theme/layouts/partials/footer.html
@@ -7,11 +7,11 @@
   margin-right: -50vw;
   color: white;
 ">
-<div class="flex flex-col">
+  <div class="flex flex-col justify-between max-w-[1124px] m-auto">
   <div id="flex_container" class="flex justify-between items-center px-2 py-3">
     <div id="title_footer">
       <p id="title_text" class="text-xl font-medium"> KSCU 103.3FM </p>
-      <p class="text-3xl" id="title_text"> Santa Clara University Radio</p>
+      <p class="text-xl" id="title_text"> Santa Clara University Radio</p>
     </div>
     <div style="text-align: center;">
       <p>
@@ -24,7 +24,6 @@
     <div id="address">
       <p> Santa Clara University </p>
       <p> 500 El Camino Real, Santa Clara </p>
-      <p> CA, 95035 </p>
     </div>
   </div>
   <div style="
