--- a/themes/kscu-theme/layouts/partials/header/basic.html
+++ b/themes/kscu-theme/layouts/partials/header/basic.html
@@ -10,7 +10,7 @@
   top: 0; 
   background-color: black; 
   color: white;">
-  <div class="flex justify-between items-center">
+  <div class="flex justify-between items-center max-w-[1124px] m-auto">
     <div class="flex px-3 items-center" style="
       height: 4rem;
       border-style: none solid none none;
