--- a/assets/css/compiled/main.css
+++ b/assets/css/compiled/main.css
@@ -2147,6 +2147,10 @@ body:has(#menu-controller:checked) {
   max-width: 65ch;
 }
 
+.max-w-\[1124px\] {
+  max-width: 1124px;
+}
+
 .max-w-3xl {
   max-width: 48rem;
 }
@@ -2501,11 +2505,6 @@ body:has(#menu-controller:checked) {
 
 .text-\[0\.6rem\] {
   font-size: 0.6rem;
-}
-
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
 }
 
 .font-semibold {
