Fixed margin bug when resizing in footer.

--- a/themes/kscu-theme/layouts/partials/footer.html
+++ b/themes/kscu-theme/layouts/partials/footer.html
@@ -11,7 +11,7 @@
   <div id="flex_container" class="flex justify-between items-center px-2 py-3">
     <div id="title_footer">
       <p id="title_text" class="text-xl font-medium"> KSCU 103.3FM </p>
-      <p class="text-xl" id="title_text"> Santa Clara University Radio</p>
+      <p id="title_text"> Santa Clara University Radio</p>
     </div>
     <div style="text-align: center;">
       <p>
@@ -85,6 +85,14 @@
       }
       #address {
         text-align: center;
+      }
+
+      #social_icons {
+      margin-left: 1.5rem;
+      }
+
+      #copyright {
+        margin-right: 1.5rem;
       }
     }
 
