--- a/themes/kscu-theme/layouts/partials/header/basic.html
+++ b/themes/kscu-theme/layouts/partials/header/basic.html
@@ -2,13 +2,12 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <!-- Currently coded in mix of Tailwind and standard CSS -->
-<div class="font-medium text-sm shadow-lg z-10"
+<div class="font-medium text-sm shadow-lg z-10 bg-neutral-900"
   style="
   position: fixed; 
   left: 0; 
   right: 0; 
-  top: 0; 
-  background-color: black; 
+  top: 0;
   color: white;">
   <div class="flex justify-between items-center max-w-[1124px] m-auto">
     <div class="flex px-3 items-center" style="
