Added padding and screen size resizing to homepage.

--- a/themes/kscu-theme/layouts/partials/article-links-horizontal.html
+++ b/themes/kscu-theme/layouts/partials/article-links-horizontal.html
@@ -1,4 +1,4 @@
-<article>
+<article class="px-3">
   <h3 class="flex items-center justify mt-6 text-xl font-semibold">
     {{ with .Params.externalUrl }}
     <div>
