--- a/assets/css/compiled/main.css
+++ b/assets/css/compiled/main.css
@@ -2547,6 +2547,11 @@ body:has(#menu-controller:checked) {
   line-height: .75rem;
 }
 
+.text-\[\#ff5733\] {
+  --tw-text-opacity: 1;
+  color: rgb(255 87 51 / var(--tw-text-opacity));
+}
+
 .text-neutral-400 {
   --tw-text-opacity: 1;
   color: rgba(var(--color-neutral-400), var(--tw-text-opacity));
