changed all style classes into tailwind css
left comments of the style class in case this fails

--- a/themes/kscu-theme/layouts/partials/footer.html
+++ b/themes/kscu-theme/layouts/partials/footer.html
@@ -1,19 +1,14 @@
 <!-- Ignores default margins on the template -->
-<footer class="font-sm text-sm shadow-lg bg-neutral-900 relative" style="
-  width: 100vw;
-  left: 50%;
-  right: 50%;
-  margin-left: -50vw;
-  margin-right: -50vw;
-  color: white;
-">
+<!-- style="width: 100vw; left: 50%; right: 50%; margin-left: -50vw; margin-right: -50vw; color: white;" -->
+<footer class="font-sm text-sm shadow-lg bg-neutral-900 relative w-screen inset-1/2 mx-auto text-[#ffffff]">
   <div class="flex flex-col justify-between max-w-[1124px] m-auto">
   <div id="flex_container" class="flex justify-between items-center px-2 py-3">
     <div id="title_footer">
       <p id="title_text" class="text-xl font-medium"> KSCU 103.3FM </p>
       <p id="title_text"> Santa Clara University Radio</p>
     </div>
-    <div style="text-align: center;">
+    <!-- style="text-align: center;" -->
+    <div class="text-center;">
       <p>
         General Inquiries: coordinating@kscu.org
       </p>
@@ -26,21 +21,22 @@
       <p> 500 El Camino Real, Santa Clara </p>
     </div>
   </div>
-  <div style="
-    background-color: white;
-    height: 0.1rem;
-  "></div>
+  <!-- style = "background-color: white; height: 0.1rem;"-->
+  <div class="bg-[#ffffff] h-[0.1rem]]"></div>
   <div id="bottom_footer" class="flex justify-between items-center px-3">
     <div id="social_icons" class="flex py-2">
       <div class="flex">
         <a href="https://www.instagram.com/kscuradio/?hl=en" target="_blank">
-          <i class="fa fa-instagram px-2" style="font-size: 24px; color: white;"></i>
+          <!-- style="font-size: 24px; color: white;"-->
+          <i class="fa fa-instagram px-2 text-2xl text-[#ffffff]"></i>
         </a>
         <a href="https://twitter.com/kscu" target="_blank">
-          <i class="fa fa-twitter px-2 text-red" style="font-size: 24px;"></i>
+          <!-- style="font-size: 24px; color: white;"-->
+          <i class="fa fa-twitter px-2 text-red text-2xl"></i>
         </a>
         <a href="https://open.spotify.com/user/kscu" target="_blank">
-          <i class="fa fa-spotify px-2" style="font-size: 24px; color: white;"></i>
+          <!-- style="font-size: 24px; color: white;"-->
+          <i class="fa fa-spotify px-2 text-2xl text-white"></i>
         </a>
       </div>
     </div>
