Corrected svg logo location

--- a/themes/kscu-theme/layouts/partials/header/basic.html
+++ b/themes/kscu-theme/layouts/partials/header/basic.html
@@ -15,9 +15,7 @@
     <div class="flex px-3 items-center" style="
       border-right: 0.15rem solid black;
       height: 100%">
-      <a href="#">
-        <img src="kscu_logo.svg" alt="kscu logo">
-      </a>
+        <img src="kscu_logo.svg" alt="KSCU Logo" width="150" height="65"></img>
     </div>
     <div class="flex flex-col w-screen">
       <div class="flex justify-between items-center">
