added borders for the Recent Post section

--- a/themes/kscu-theme/layouts/partials/recent-articles.html
+++ b/themes/kscu-theme/layouts/partials/recent-articles.html
@@ -1,5 +1,5 @@
 {{ if .Site.Params.homepage.showRecent | default false }}
-<div class="font-semibold text-4xl py-3" style="color: black">
+{{/*  <div class="font-semibold text-4xl py-3" style="color: black">
   <div style="
         line-height: 0.1em;
         border-bottom: 1px solid black;
@@ -10,8 +10,14 @@
       Recent Posts
     </span>
   </div>
+</div>  */}}
+<div>
+  <div class="font-semibold text-4xl py-3 border">
+    Recent Posts
+  </div>
 </div>
-<div id="articles" class="flex justify-between content-evenly" style="padding-bottom: 4rem;">
+<div id="articles" class="flex justify-between content-evenly" 
+style="padding-bottom: 4rem; border-style: solid; border-width: 0px 1px 1px 1px;">
 {{ range first 3 (.Paginate (where .Site.RegularPages "Type" "in" .Site.Params.mainSections)).Pages }}
 {{ partial "article-links-horizontal.html" . }}
 {{ end }}
