--- a/themes/kscu-theme/layouts/partials/footer.html
+++ b/themes/kscu-theme/layouts/partials/footer.html
@@ -1,51 +1,28 @@
 <!-- Ignores default margins on the template -->
-<footer class="font-sm text-sm shadow-lg bg-neutral-900 relative" style="
+<footer class="font-sm text-sm relative border" style="
   width: 100vw;
   left: 50%;
   right: 50%;
   margin-left: -50vw;
   margin-right: -50vw;
-  color: white;
+  color: black;
 ">
   <div class="flex flex-col justify-between max-w-[1124px] m-auto">
-  <div id="flex_container" class="flex justify-between items-center px-2 py-3">
+  <div id="flex_container" class="flex justify-between items-center px-2" style="font-family: 'IBM Plex Mono', monospace;">
     <div id="title_footer">
-      <p id="title_text" class="text-xl font-medium"> KSCU 103.3FM </p>
-      <p id="title_text"> Santa Clara University Radio</p>
+      <p id="title_text" class="text-2xl font-bold"> KSCU 103.3FM </p>
+      <p id="title_text" class="text-base"> Santa Clara University's Student Run Radio</p>
     </div>
-    <div style="text-align: center;">
-      <p>
-        General Inquiries: coordinating@kscu.org
-      </p>
-      <p>
-        Submit Music: music@kscu.org
-      </p>
-    </div>
-    <div id="address">
-      <p> Santa Clara University </p>
-      <p> 500 El Camino Real, Santa Clara </p>
+    <div id="address" class="text-xl py-3">
+      <p> 500 El Camino Real </p>
+      <p> Santa Clara </p>
+      <p> CA, 95050 </p>
     </div>
   </div>
   <div style="
     background-color: white;
     height: 0.1rem;
   "></div>
-  <div id="bottom_footer" class="flex justify-between items-center px-3">
-    <div id="social_icons" class="flex py-2">
-      <div class="flex">
-        <a href="https://www.instagram.com/kscuradio/?hl=en" target="_blank">
-          <i class="fa fa-instagram px-2" style="font-size: 24px; color: white;"></i>
-        </a>
-        <a href="https://twitter.com/kscu" target="_blank">
-          <i class="fa fa-twitter px-2 text-red" style="font-size: 24px;"></i>
-        </a>
-        <a href="https://open.spotify.com/user/kscu" target="_blank">
-          <i class="fa fa-spotify px-2" style="font-size: 24px; color: white;"></i>
-        </a>
-      </div>
-    </div>
-    <p id="copyright"> Copyright &#169 2022 </p>
-  </div>
 
 </div>
 <style>
