--- a/themes/kscu-theme/layouts/partials/footer.html
+++ b/themes/kscu-theme/layouts/partials/footer.html
@@ -1,10 +1,11 @@
 <!-- Ignores default margins on the template -->
 <footer class="font-sm text-sm relative border" style="
-  width: 100vw;
+  width: 80vw;
   left: 50%;
   right: 50%;
-  margin-left: -50vw;
+  margin-left: -40vw;
   margin-right: -50vw;
+  margin-top: 10px;
   color: black;
 ">
   <div class="flex flex-col justify-between max-w-[1124px] m-auto">
