--- a/themes/kscu-theme/layouts/partials/footer.html
+++ b/themes/kscu-theme/layouts/partials/footer.html
@@ -14,7 +14,7 @@
       <p id="title_text" class="text-2xl font-bold"> KSCU 103.3FM </p>
       <p id="title_text" class="text-base"> Santa Clara University's Student Run Radio</p>
     </div>
-    <div id="address" class="text-lg py-3 font-medium">
+    <div id="address" class="text-md py-3 font-medium">
       <p> 500 El Camino Real </p>
       <p> Santa Clara </p>
       <p> CA, 95050 </p>
@@ -55,7 +55,9 @@
       }
       #title_footer {
         display: flex;
+        flex-direction: column;
         align-items: center;
+        padding-top: 1rem;
       }
       #title_text {
         padding-left: 1rem;
