Darkened footer to match Figma.

--- a/themes/kscu-theme/layouts/partials/footer.html
+++ b/themes/kscu-theme/layouts/partials/footer.html
@@ -1,5 +1,5 @@
 <!-- Ignores default margins on the template -->
-<footer class="font-sm text-sm relative border" style="
+<footer class="bg-neutral-100 font-sm text-sm relative border" style="
   width: 100vw;
   left: 50%;
   right: 50%;
