Changed font sizing on homepage.

--- a/themes/kscu-theme/layouts/partials/recent-articles.html
+++ b/themes/kscu-theme/layouts/partials/recent-articles.html
@@ -12,8 +12,8 @@
   </div>
 </div>  */}}
 <div>
-  <div class="font-semibold text-4xl py-3 px-3 border">
-    Recent Posts
+  <div class="font-semibold text-2xl py-3 px-3 border">
+    Recent Blogposts
   </div>
 </div>
 <div id="articles" class="flex justify-between content-evenly px-3" 
