added margin top to the footer

--- a/themes/kscu-theme/layouts/partials/footer.html
+++ b/themes/kscu-theme/layouts/partials/footer.html
@@ -5,6 +5,7 @@
   right: 50%;
   margin-left: -50vw;
   margin-right: -50vw;
+  margin-top: 10px;
   color: black;
 ">
   <div class="flex flex-col justify-between max-w-[1124px] m-auto">
